syntax = "proto3";

package authServerClient;
import "protobuf-response.proto";
import "jwt-response.proto";
import "google/protobuf/wrappers.proto";

option java_package = "org.dbs.protobuf.auth";
option java_multiple_files = true;

////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
message UserLoginRequest {
  string userLogin = 1;
  string userPassword = 2;
}

message RefreshUserJwtRequest {
  org.dbs.protobuf.core.Jwts jwts = 1;
}
